--- a/examples/basic.html
+++ b/examples/basic.html
@@ -1,9 +1,9 @@
-<!doctype>
+<!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8" />
 	<title>jsPDF</title>
 
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />	
 	<link rel="stylesheet" type="text/css" href="css/smoothness/jquery-ui-1.8.17.custom.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 
