--- a/examples/downloadify.html
+++ b/examples/downloadify.html
@@ -1,6 +1,7 @@
-<!doctype>
+<!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8" />
 	<title>jsPDF</title>
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<script type="text/javascript" src="../libs/base64.js"></script>
